<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/backBtn"
            android:title="Accountshop verlassen"/>
    </group>

    <item android:title="Item-Kategorien">
    <menu>
        <item
            android:id="@+id/nav_eyes"
            android:title="@string/avatar_eyes" />
        <item
            android:id="@+id/nav_mouths"
            android:title="@string/avatar_mouths" />
        <item
            android:id="@+id/nav_hats"
            android:title="@string/avatar_hats" />
        <item
            android:id="@+id/nav_skins"
            android:title="@string/avatar_skins" />
        <item
            android:id="@+id/nav_bodies"
            android:title="@string/avatar_bodies" />
        <item
            android:id="@+id/nav_backgrounds"
            android:title="@string/avatar_backgrounds" />
    </menu>
    </item>
</menu>
