<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_UserName_nav"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/username"
        android:layout_marginBottom="162dp"
        android:layout_above="@+id/bt_Login"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_Password_nav"
        android:layout_row="3"
        android:layout_column="0"
        android:nextFocusForward="@+id/bt_Login"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/et_UserName_nav"
        android:layout_alignStart="@+id/et_UserName_nav" />

    <Button
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_Login"
        android:textSize="12dp"
        android:id="@+id/bt_Login"
        android:layout_marginBottom="73dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>